fix: title overflow

--- a/src/app/components/champions/champion-details/skins/skins.component.scss
+++ b/src/app/components/champions/champion-details/skins/skins.component.scss
@@ -1,19 +1,33 @@
+@import "../../../../../styles/palette.scss";
+
 .skins-container {
-  padding: 2rem;
+  padding: 2rem 2rem 8rem 2rem;
+
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  align-items: flex-end;
   gap: 1rem;
-}
-
-img {
-  border-radius: 5px;
-  box-shadow: rgb(0 0 0 / 19%) 0px 10px 20px, rgb(0 0 0 / 23%) 0px 6px 6px;
-  cursor: url("../../../../../assets/hover.png"), auto;
 }
 
 .skin {
   display: flex;
   flex-direction: column;
+}
+
+.title {
+  overflow: hidden;
+}
+.image {
+  overflow: hidden;
+  border-radius: 8px;
+  &:hover img {
+    transform: scale(1.1);
+  }
+}
+
+img {
+  transition: 0.2s ease-out;
+  cursor: url("../../../../../assets/hover.png"), auto;
 }
 
 @media only screen and (max-width: 1200px) {
